--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,15 @@ li > a {
     color: #E5E7EB;
 }
 
+li > a:hover {
+    color: #FFFFFF;
+}
+
 .logo {
-    font-size: 24px;
+    font-size: 30px;
     color: #F9FAF8;
+    font-family: 'Brush Script MT', cursive;
+    cursor: default;
 }
 
 .section {
@@ -50,6 +56,7 @@ li > a {
     align-items: center;
     gap: 20px;
     background-color: #1F2937;
+    padding-top: 0;
 }
 
 
@@ -66,12 +73,19 @@ li > a {
     border-radius: 8px;
     padding: 5px;
     color: #F9FAF8;
+    font-weight: bold;
+    border: 1px solid #3882F6;
+}
+
+button:hover {
+    box-shadow: inset 0 0 100px 100px #eaeff74d;
 }
 
 .hero-main-text {
     font-size: 48px;
     font-weight: bold;
     margin: 0;
+    margin-bottom: 20px;
 }
 
 .secondary-text {
@@ -80,8 +94,9 @@ li > a {
     margin-bottom: 12px;
 }
 
-img {
-    flex: 1;
+.main > img {
+    width: 450px;
+    height: auto;
 }
 
 footer {
@@ -107,14 +122,27 @@ footer {
     padding: 0 30px;
 }
 
-.card {
-    width: 130px;
-    height: 150px;
+.card > img {
+    width: 220px;
+    height: 250px;
+    margin-bottom: 16px;
+    border-radius: 5px 5px 0 0;
+}
+
+.card > figcaption {
+    margin-bottom: 15px;
+}
+
+.card:hover {
+    border: 3px solid rgba(89, 140, 250, 0.81);
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .quote {
     background-color: #E5E7EB;
     flex-direction: column;
+    padding: 80px 300px;
 }
 
 .quote > q {
@@ -122,14 +150,20 @@ footer {
     font-weight: lighter;
     font-style: italic;
     color: #1F2937;
+    margin-bottom: 16px;
+    text-align: justify;
 }
 
 .quote > p {
     text-align: right;
+    font-size: 28px;
+    font-weight: bold;
 }
 
 .section.action {
     flex-direction: column;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .action > .container {
@@ -155,8 +189,9 @@ footer {
 
 .btn {
     background-color: #3882F6;
-    border: 3px solid #F9FAF8;
-    border-radius: 5px;
+    border: 2px solid #F9FAF8;
+    border-radius: 10px;
     color:#F9FAF8;
     padding: 10px 40px;
+    font-weight: bold;
 }
